[eugene-#46] Improve the Execution Engine and Order Book. * [eugene-#21] Improve handling of cancellations. * [eugene-#14] Cancel Market orders immidiately, once there is no liquidity. * [eugene-#48] Refactor ExecutionEngine to immediately execute orders. * [eugene-#49] Improve MarketDataEngine. * [eugene-#62] Add integration tests for market/ modules.